--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
     <title>Blogpost</title>
 </head>
 <body>
-    <h1>titulo del blog del post</h1>
-    <p>este es el parrafo del blog</p>
+    <div class="container">
+        <h1>titulo del blog del post</h1>
+        <p>este es el parrafo del blog</p>
+    </div>
 </body>
 </html>
