--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <h3>Esta es la cabecera en el branch cabecera</h3>
+        </header>
         <h1>titulo del blog del post</h1>
         <p>este es el parrafo del blog</p>
     </div>
