Le añadimos un parrafo y cambio de letra

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
     <div class="container">
         <h1>titulo del blog del post</h1>
         <p>este es el parrafo del blog</p>
+        <p>Estoy agregando un nuevo parrafo adicional para el vidoe ya tu sabe ya supiste
+            como dice el pana amigo duki ya supiteeeee asheeeeee
+        </p>
     </div>
 </body>
 </html>
