Cambiado desde visual despues de Git

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h3>Esta es la cabecera cambiada en github</h3>
+            <h3>Esta es la cabecera cambiada en github y con visual code</h3>
         </header>
         <h1>titulo del blog del post</h1>
         <p>este es el parrafo del blog</p>
